sources/v3.1/examples.rst
.. _tutorials-and-examples:

##############################
Tutorials and Examples
##############################

- :doc:`FFmpeg Introductory Tutorials </examples/ffmpeg/tutorials>`
- :doc:`FFmpeg Software Filters </examples/ffmpeg/filters>`
- :doc:`FFmpeg Video Quality </examples/ffmpeg/quality_analysis>`

.. this comment adds a line break...

- :doc:`GStreamer Introductory Tutorials </examples/gstreamer/tutorials>`
- :doc:`GStreamer Software Filters </examples/gstreamer/filters>`
- :doc:`GStreamer Video Quality </examples/gstreamer/quality_analysis>`
- :doc:`GStreamer Compositor </examples/gstreamer/xcompositor>`
- :doc:`GStreamer ABR Ladder </examples/gstreamer/xabrladder>`

.. this comment adds a line break...

- :doc:`C-Based Applications </examples/xma/xma_apps>`


.. toctree::
   :maxdepth: 2
   :hidden:

   FFmpeg Introductory Tutorials </examples/ffmpeg/tutorials>
   FFmpeg Software Filters </examples/ffmpeg/filters>
   FFmpeg Video Quality </examples/ffmpeg/quality_analysis>
   GStreamer Introductory Tutorials </examples/gstreamer/tutorials>
   GStreamer Software Filters </examples/gstreamer/filters>
   GStreamer Video Quality </examples/gstreamer/quality_analysis>
   GStreamer Compositor </examples/gstreamer/xcompositor>
   GStreamer ABR Ladder </examples/gstreamer/xabrladder>
   C-Based Applications </examples/xma/xma_apps>

..
  ------------
  
  © Copyright 2020-2023, Advanced Micro Devices, Inc.
  
  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
  
  http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
